# spot-sync

./: .gitignore  README.es.md  README.md  new-playlist.py  pyproject.toml
app/: __main__.py
app/funcs/: new.py
app/utils/: arguments.py  spotdl.py
main/: s-new-playlist.py  s-sync-all.py  s-sync-one.py  sync-all.py
main-folder/: new-playlist.py
spotsync/: __main__.py
spotsync/funcs/: new.py  sync.py  tui.py
spotsync/utils/: arguments.py  downloader.py  extractors.py  spotdl.py  theme.py
start-folder/: sync-all.py
