[tool.poetry]
name = "spotsync"
version = "0.1.0"
description = "A extension of SpotDL to create and sync Spotify Playlist"
authors = ["Rikiub <rikiub.dev@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/Rikiub/spot-sync"
keywords = ["music", "downloader", "spotdl", "spotify"]

[tool.poetry.dependencies]
python = ">=3.7.2,<3.12"
spotdl = "^4.1.11"
rich = "^13.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"